--- a/_posts/2019-03-04-ghc-notes-1.md
+++ b/_posts/2019-03-04-ghc-notes-1.md
@@ -4,7 +4,7 @@ date: 2019-03-04 16:49:59
 tags: [GHC, Haskell]
 ---
 ### Introduction
-I have been working on ES.hs for a month or two. In case you haven’t heard about it before, ES.hs is a compiler that compiles Haskell to ES6 code. There are already a few options out there: there is GHCJS, which takes over after the LLVM phase. This renders communication with Javascript not very straightforward but in my opinion has high potential in WebAssembly. There also is Haste, which seems to carry a huge chunk of runtime with the code it generates. Different from them, ES.hs uses the GHC frontend and a part of the backend as a library until after STG, which keeps the naming structure and takes the form of simply typed lambda calculus. Therefore, the code EH.hs generates interpolate nicely with native Javascript: for example a Haskell function `Data.List.length` simply becomes `Data/List.js :: function length()`. Another advantage is that the generated code does not carry a runtime because ES6’s lambda facility is quite usable, at least usable to the extent that it maps nicely to STG.
+I have been working on ES.hs for a month or two. ES.hs is a compiler that compiles Haskell to ES6 code. There are already a few options out there: there is GHCJS, which takes over after the LLVM phase. This renders communication with Javascript not very straightforward but in my opinion has high potential in WebAssembly. There also is Haste, which seems to carry a huge chunk of runtime with the code it generates. Different from them, ES.hs uses the GHC frontend and a part of the backend as a library until after STG, which keeps the naming structure and takes the form of simply typed lambda calculus. Therefore, the code EH.hs generates interpolate nicely with native Javascript: for example a Haskell function `Data.List.length` simply becomes `Data/List.js :: function length()`. Another advantage is that the generated code does not carry a runtime because ES6’s lambda facility is quite usable, at least usable to the extent that it maps nicely to STG.
 
 However, I have found that code generation in Javascript can hardly be called “difficult” compared to leveraging the famous Glasgow Haskell Compiler. Every hour I spent on the code generation part of ES.hs, I spent at least double the time trying to understand the dozen different types of intermediate results GHC produces. Fortunately, the subreddit r/haskell and freenode #ghc provided me with tons of help. A big thank-you goes to them, and I am now starting this series of blogs to write down what I learned about GHC so that people could suffer less in the future. GHC 8.6.1 is the latest stable version and the one I am using. Therefore, things in this blog should apply to 8.6.1 but may not apply to a later or former version of GHC, as its API is constantly changing.
 
